--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,7 +6,7 @@
       <%= f.input :task %>
       <%= f.input :description %>
       <br/>
-      <%= f.submit 'Create Task', class: 'btn btn-primary' %>
+      <%= f.submit 'Update Task', class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
