--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <div class="header col-12 text-center">
+      <h1 class="header-text"> Horrigan Quiz One </h1>
+    </div>
+
+    <ul class="nav justify-content-center">
+      <li class="nav-item">
+        <%= link_to "Home", root_path, class: 'btn btn-primary' %>
+      </li>
+      
+      <li class="nav-item">
+        <%= link_to "New Task", new_item_path, class: 'btn btn-primary' %>
+      </li>
+    </ul>
+
+
     <%= yield %>
   </body>
 </html>
