--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,14 @@
 
   <body>
     <div class="header col-12 text-center">
-      <h1 class="header-text"> Horrigan Quiz One </h1>
+      <h1 class="header-text"> Horrigan Quiz One & Two </h1>
     </div>
 
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <%= link_to "Home", root_path, class: 'btn btn-primary' %>
       </li>
-      
+
       <li class="nav-item">
         <%= link_to "New Task", new_item_path, class: 'btn btn-primary' %>
       </li>
